--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -774,6 +774,9 @@
             td {
                 padding-top: 0;
                 padding-bottom: 5px;
+                @include laptopM {
+                    padding-bottom: 3px;
+                }
             }
         }
     }
