--- a/sass/elements/game/_missions.scss
+++ b/sass/elements/game/_missions.scss
@@ -4,7 +4,7 @@
     background-size: 100% 50%;
     background-repeat: no-repeat;
     background-position: top;
-    &__item{
+    &__item {
         width: 100%;
         height: 50%;
         display: flex;
@@ -17,13 +17,18 @@
         align-items: flex-end;
         position: relative;
     }
-    &__countdownWrapper{
+    &__countdownWrapper {
         position: absolute;
         height: 100%;
         left: 82px;
         color: $color-white;
         top: 10px;
         font-size: 20px;
+        @include laptopM {
+            left: 56px;
+            top: 4px;
+            font-size: 16px;
+        }
     }
     &__detailsWrapper {
         width: 50%;
@@ -31,6 +36,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        @include laptopM {
+            height: 98%;
+        }
     }
     &__details {
         width: 90%;
@@ -43,6 +51,10 @@
         background: #cb8252;
         border: 13px solid #805333;
         box-shadow: 13px 13px #a56a43 inset, -5px -5px #a56a43 inset;
+        @include laptopM {
+            border: 7px solid #805333;
+            box-shadow: 7px 7px #a56a43 inset, -6px -6px #a56a43 inset;
+        }
     }
     &__listWrapper {
         display: flex;
@@ -60,6 +72,10 @@
             margin-top: 20px;
             font-size: 32px;
         }
+        @include laptopM {
+            margin-top: 15px;
+            font-size: 29px;
+        }
     }
 
     &__papyrus {
@@ -74,6 +90,9 @@
         @include laptopL {
             width: 17%;
         }
+        @include laptopM {
+            width: 16%;
+        }
     }
     &__willingnessBarWrapper {
         height: 90%;
@@ -85,11 +104,17 @@
         position: relative;
         overflow: hidden;
         margin-left: 10px;
-        &-error{
-            border: 5px solid $color-error; 
-        } 
+        &-error {
+            border: 5px solid $color-error;
+        }
+        @include laptopM {
+            width: 39px;
+            border: 4px solid #ffcd00;
+            margin-bottom: 14px;
+            margin-left: 5px;
+        }
     }
-    &__missionError{
+    &__missionError {
         margin-top: 0.25rem;
         color: $color-error;
     }
@@ -105,9 +130,10 @@
             background: -webkit-linear-gradient(to right, #38ef7d, #11998e);
             background: linear-gradient(to right, #38ef7d, #11998e);
         }
-        &-red {z-index: 0;
+        &-red {
+            z-index: 0;
             height: 100%;
-            background: linear-gradient(-45deg, #E71D36, #7200da, #D81159, #f9320c);
+            background: linear-gradient(-45deg, #e71d36, #7200da, #d81159, #f9320c);
             background-size: 400% 400%;
         }
     }
@@ -143,6 +169,9 @@
         height: auto;
         width: 50%;
         object-fit: cover;
+        @include laptopM {
+            width: 45%;
+        }
     }
     &__informations {
         height: 100%;
@@ -188,12 +217,21 @@
             padding: 0 24px;
             box-shadow: -27px 0 #f7dab4 inset;
         }
+        @include laptopM {
+            height: 104%;
+            width: 78%;
+            padding: 0px 18px;
+            box-shadow: -22px 0 #f7dab4 inset;
+        }
     }
     &__general {
         display: flex;
         justify-content: space-between;
         height: 147px;
         overflow: hidden;
+        @include laptopL {
+            height: 105px;
+        }
     }
     &__detailsWrapper {
         height: 90%;
@@ -209,6 +247,14 @@
         width: auto;
         height: 89%;
         object-fit: cover;
+        @include laptopL {
+            margin-top: 10px;
+            margin-right: 28px;
+        }
+        @include laptopM {
+            margin-top: 8px;
+           margin-right: 35px;
+        }
     }
 
     &__title {
@@ -232,6 +278,12 @@
         width: 37px;
         height: auto;
         object-fit: cover;
+        @include desktopS {
+            width: 32px;
+        }
+        @include laptopL {
+            width: 27px;
+        }
     }
     &__detailName {
         margin-left: 0.5rem;
@@ -294,6 +346,11 @@
             height: 35px;
             width: 22px;
         }
+
+        @include laptopM {
+            height: 33px;
+            width: 20px;
+        }
     }
     &::before {
         border-radius: 15px 0 0 15px;
@@ -309,5 +366,9 @@
     }
     @include laptopL {
         height: 17px;
+    }
+    @include laptopM {
+        height: 15px;
+        box-shadow: -58px 0 #b27a49 inset;
     }
 }
