--- a/sass/elements/game/_guard.scss
+++ b/sass/elements/game/_guard.scss
@@ -34,6 +34,9 @@
         &:hover {
             backdrop-filter: blur(4px);
         }
+        @include desktopS {
+            border-radius: 16px;
+        }
         @include laptopL {
             padding: 6px;
         }
@@ -62,6 +65,9 @@
         @include desktopS {
             font-size: 36px;
         }
+        @include laptopM {
+            font-size: 31px;
+        }
     }
     &__text {
         font-size: 1.25rem;
@@ -75,6 +81,10 @@
         @include laptopL {
             margin-top: 36px;
         }
+        @include laptopM {
+            margin-top: 17px;
+        }
+      
     }
 
     &__awardIcon {
@@ -140,11 +150,18 @@
         background: rgba(255, 255, 255, 0.6);
         backdrop-filter: blur(4px);
         border-radius: 25px;
+        @include laptopM {
+            padding: 8px;
+            border-radius: 16px;
+        }
     }
     &__summaryIcon {
         height: 190px;
         width: auto;
         object-fit: cover;
+        @include laptopM {
+            height: 166px;
+        }
     }
     &__summaryTitle {
         font-size: 1.5rem;
@@ -207,6 +224,10 @@
             width: 46px;
             height: 46px;
         }
+        @include laptopM {
+            width: 39px;
+            height: 39px;
+        }
     }
     .field {
         position: relative;
@@ -249,6 +270,9 @@
         }
         @include desktopS {
             height: 25px;
+        }
+        @include laptopM {
+            height: 19px;
         }
     }
     .value {
@@ -301,6 +325,9 @@
                 line-height: 3.2rem;
             }
         }
+        @include laptopM {
+            margin-bottom: 61px;
+        }
     }
 }
 // classes responsible for progress bar
@@ -321,6 +348,9 @@
     position: absolute;
     border-radius: 40px;
     height: 30px;
+    @include laptopM {
+        height: 19px;
+    }
 }
 .progressBar-1 {
     width: 8%;
