media - laptopM - account

--- a/sass/elements/game/_account.scss
+++ b/sass/elements/game/_account.scss
@@ -50,7 +50,9 @@
         }
         @include laptopM {
             height: 47px;
+            margin-top: 8px;
         }
+
     }
     &__elementIcon{
         height: 100%;
