--- a/sass/elements/game/_loading.scss
+++ b/sass/elements/game/_loading.scss
@@ -11,14 +11,15 @@
     align-items: center;
     flex-direction: column;
     &__monster {
-        position: absolute;
         width: 300px;
         height: auto;
         object-fit: cover;
         z-index: 2;
-
+        @include laptopM {
+            width: 218px;
+        }
     }
-    &__title{
+    &__title {
         margin-top: 34px;
         font-size: 53px;
         font-weight: bold;
@@ -33,24 +34,18 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
     }
-    &__circle {
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(45deg, transparent, transparent, $color-red);
-        animation: 2s an__loading linear infinite;
-        border-radius: 50%;
-        position: relative;
-        &::before {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            right: 10px;
-            bottom: 10px;
-            background: $color-white;
-            border-radius: 50%;
+    &__img {
+        margin-top: 30px;
+        width: 160px;
+        height: 160px;
+        object-fit: cover;
+        animation: 1.5s an__loading linear infinite;
+        @include laptopM {
+            margin-top: 24px;
+            width: 146px;
+            height: 146px;
         }
     }
 }
