--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -23,6 +23,11 @@
         min-height: 520px;
         max-height: 720px;
     }
+    @include laptopS {
+        width: 1024px;
+        min-height: 600px;
+        max-height: 768px;
+    }
 }
 .game__contentContainer{
     width: 80%;
