--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -54,6 +54,9 @@
             @include laptopM {
 
             }
+            @include laptopS {
+                height: 330px;
+            }
         }
     }
 
@@ -598,6 +601,12 @@
             width: 99px;
             height: 99px;
         }
+        @include laptopS {
+            border-left: 2px solid $color-gray_dark;
+            border-top: 2px solid $color-gray_dark;
+            width: 78px;
+            height: 78px;
+        }
     }
 
     &__backpackItemGraphic {
@@ -700,6 +709,10 @@
         @include laptopM {
             height: 28px;
         }
+        @include laptopS {
+            height: 26px;
+            margin: 5px auto;
+        }
     }
     &__goldIcon {
         height: 100%;
@@ -736,12 +749,21 @@
 .profile__backpackRow {
     &:first-child .profile__backpackItem:last-child {
         border-right: 3px solid $color-gray_dark;
+        @include laptopS {
+            border-right: 2px solid $color-gray_dark;
+        }
     }
     &:last-child .profile__backpackItem {
         border-bottom: 3px solid $color-gray_dark;
+        @include laptopS {
+            border-bottom: 2px solid $color-gray_dark;
+        }
     }
     &:last-child .profile__backpackItem:last-child {
         border-right: 3px solid $color-gray_dark;
+        @include laptopS {
+            border-right: 2px solid $color-gray_dark;
+        }
     }
 }
 
